--- a/jms-header-builder/assets/css/front.css
+++ b/jms-header-builder/assets/css/front.css
@@ -5,3 +5,47 @@
 .addon-menu ul li{
     list-style: none;
 }
+/* Sider bar */
+    .sidebar-wrapper .sidebar-content{
+        position: fixed;
+        top: 0;
+        height: 100%;
+        z-index: 9999;
+        background: #fff;
+        padding: 15px;
+    }
+    .sidebar-content.pos-right {
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+        transition: .3s all;
+        right: 0;
+    }
+    .sidebar-content.pos-left {
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%);
+        transition: .3s all;
+        left: 0;
+    }
+    .sidebar-wrapper .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        -webkit-transition: .3s all;
+        transition: .3s all;
+        opacity: 0;
+        visibility: hidden;
+        background: rgba(0,0,0,0.4);
+        z-index: 9998;
+    }
+    .sidebar-wrapper.show .sidebar-content {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+    .sidebar-wrapper.show .overlay{
+        opacity: 1;
+        visibility: visible;
+    }
+/* ------- */
