--- a/jms-header-builder/assets/css/header-builder.css
+++ b/jms-header-builder/assets/css/header-builder.css
@@ -970,7 +970,7 @@ img{
         background: #fff;
         box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.3);
         display:none;
-        max-height:600px;
+        max-height:700px;
         overflow-y: auto;
     }
     .hb-settings-box.active {
@@ -987,21 +987,33 @@ img{
         padding: 0 15px;
     }
     /* Popup Logo */
-        .image-setting .file-image{
+        .input-wrapper.file-image{
             position: relative;
         }
         .input-wrapper input {
             width: 100%;
             height: 35px;
         }
-        .file-image #add-image {
+
+        .file-image #add-image, .file-image .remove-img {
             position: absolute;
             top: 0;
-            right: 0;
             width: 25px;
             height:100%;
             text-align: center;
-            padding: 0;
+            line-height:34px;
+            background: #eee;
+            border:1px solid #dadada;
+            cursor: pointer;
+        }
+        .file-image #add-image {
+            right: 25px;
+
+        }
+        .file-image .remove-img {
+            top: 0;
+            right: 0;
+            border-left:none;
         }
     /* ------ */
 /* ------ */
