--- a/jmsslider/css/admin.css
+++ b/jmsslider/css/admin.css
@@ -124,17 +124,15 @@
 	margin-top: 10px;
 }
 
-.btn.fixed-right {
-	position: fixed;
-	top: 22%;
-	right: 0;
-	height: 50px;
+.btn-save.fixed-right {
 	font-weight: 600;
 	letter-spacing: 1px;
 	cursor:pointer;
-	box-shadow:0px 2px 2px #999;
-	z-index:1000;
 	text-transform:uppercase;
+	background: #72C279;
+	border:none;
+	color:#fff;
+	padding: 15px;
 }
 
 /**
@@ -1198,19 +1196,25 @@
 	color: #fff;
 	padding: 5px 10px;
 }
-.list-slides li .edit-slide {
+.list-slides li .edit-slide, .list-slides li .delete-slide {
 	position: absolute;
-	right: 0;
 	bottom: 0;
 	display: inline-block;
 	z-index: 2;
 	text-decoration: none;
 	color: #fff;
 }
+.list-slides li .edit-slide {
+	right: 0;
+}
+
+.list-slides li .delete-slide {
+	right: 25px;
+}
 .list-slides li .dashicons {
-	font-size: 27px;
-	width: 27px;
-	height: 27px;
+	font-size: 18px;
+	width: 25px;
+	height: 23px;
 }
 
 .col-5 {
@@ -1298,4 +1302,62 @@
 	right: 0;
 	display: flex;
 	padding: 0 15px;
+}
+.edit_form {
+	float: left;
+	width: 100%;
+}
+.btn-action {
+	position: fixed;
+	right:0;
+	top: 35%;
+	z-index: 1000;
+}
+.btn-action a {
+	background:#3498db;
+	padding: 15px;
+	color:#fff;
+	text-decoration: none;
+	display: block;
+}
+.btn-action a.btn-export {
+	background: #f1c40f;
+}
+.btn-action a.btn-import {
+	background: #f39c12;
+}
+.upload-slider-popup, .upload-bg {
+	visibility: hidden;
+	display: none;
+}
+.upload-slider-popup.active {
+	visibility: visible;
+	display: block;
+	position: fixed;
+	background: #fff;
+	top: calc(50% - 105px);
+	left: calc(50% - 187px);
+	z-index: 1001;
+	box-shadow: 0.5px 0px 5px 0px rgba(0,0,0,0.35);
+	border-radius: 5px;
+	padding: 20px 30px;
+	text-align: center;
+}
+.upload-bg.active {
+	visibility: visible;
+	display: block;
+	content: "";
+	background: rgba(0,0,0,0.4);
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+}
+.upload-slider-popup .close-upload {
+	text-decoration: none;
+	position: absolute;
+	right: 10px;
+	top: 10px;
 }
